--- a/css/style.scss
+++ b/css/style.scss
@@ -11,16 +11,17 @@
 }
 body {
   background: #e5e5e5;
+  width: 1440px;
 }
 header {
   .header-container {
-    width: 1440px;
+    // width: 1440px;
     height: 70px;
     background: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 150px;
+    padding: 0px 140px;
     nav {
       ul {
         display: flex;
@@ -50,19 +51,19 @@ header {
               left: 47px;
             }
             .chat-count {
-                font-size: 10px;
-                width: 14px;
-                height: 14px;
-                color: #fff;
-                background: red;
-                position: absolute;
-                display: flex;
-                border-radius: 50%;
-                justify-content: center;
-                align-items: center;
-                top: 17px;
-                left: 47px;
-              }
+              font-size: 10px;
+              width: 14px;
+              height: 14px;
+              color: #fff;
+              background: red;
+              position: absolute;
+              display: flex;
+              border-radius: 50%;
+              justify-content: center;
+              align-items: center;
+              top: 17px;
+              left: 47px;
+            }
           }
           &.active {
             a {
@@ -130,6 +131,91 @@ header {
           align-items: center;
           border-top-right-radius: 22px;
           border-bottom-right-radius: 22px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+main {
+  padding: 30px 140px 0 140px;
+  background: #e5e5e5;
+  height: 500px;
+  .main-container {
+    display: grid;
+    grid-template-columns: 278px 1fr 290px;
+    gap: 18px;
+    .left-sidebar {
+      .profile-box {
+        box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+        width: 278px;
+        height: 168px;
+        background: #ffffff;
+        border-radius: 15px;
+        .content-text {
+          display: flex;
+          align-items: center;
+          > img {
+            width: 44px;
+            height: 44px;
+            border-radius: 45%;
+            margin-top: -25px;
+            margin-left: 12px;
+            border: 2px solid #fff;
+          }
+          .name-job {
+            padding-left: 5px;
+
+            .name {
+              font-family: Roboto;
+              font-size: 12px;
+              font-weight: 400;
+              line-height: 14px;
+              letter-spacing: 1px;
+            }
+            .job {
+              color: rgba($color: #000000, $alpha: 0.46);
+              font-size: 10px;
+            }
+          }
+          .box-bar {
+            width: 61px;
+            height: 3px;
+            background: #f6f6f6;
+            border-radius: 8px;
+            margin-left: 46px;
+            span {
+              background: var(--color-blue);
+              width: auto;
+              height: 2px;
+              display: block;
+              border-radius: 8px;
+              &::before {
+                content: attr(title);
+                font-size: 10px;
+                color: var(--color-blue);
+                position: relative;
+                top: -10px;
+                right: -72px;
+              }
+            }
+          }
+        }
+        .box-bottom {
+          display: flex;
+          align-items: center;
+          padding: 8px 0 8px 23px;
+          border-top: 1px solid #eeeeee;
+          margin-top: 1rem;
+          img {
+            padding-right: 18px;
+            cursor: pointer;
+          }
+          span {
+            font-size: 10px;
+            color: rgba($color: #000000, $alpha: 0.46);
+          }
         }
       }
     }
