--- a/css/style.scss
+++ b/css/style.scss
@@ -1,18 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import url(fontello.css);
+
+@mixin center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  font-family: "Roboto", sans-serif;
 }
+
 :root {
   --color-blue: #00acff;
 }
+
 body {
   background: #e5e5e5;
   width: 1440px;
 }
+
 header {
   .header-container {
     // width: 1440px;
@@ -22,12 +34,15 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0px 140px;
+
     nav {
       ul {
         display: flex;
+
         li {
           a {
             position: relative;
+
             i {
               color: rgba($color: #000000, $alpha: 0.6);
               display: flex;
@@ -50,6 +65,7 @@ header {
               top: 17px;
               left: 47px;
             }
+
             .chat-count {
               font-size: 10px;
               width: 14px;
@@ -65,6 +81,7 @@ header {
               left: 47px;
             }
           }
+
           &.active {
             a {
               i {
@@ -74,6 +91,7 @@ header {
               }
             }
           }
+
           &:last-child {
             a {
               i {
@@ -84,9 +102,11 @@ header {
         }
       }
     }
+
     .logo {
       display: flex;
       align-items: center;
+
       a {
         img {
           height: 40px;
@@ -94,6 +114,7 @@ header {
         }
       }
     }
+
     .nav-input {
       .line {
         position: absolute;
@@ -104,8 +125,10 @@ header {
         border: 1px solid rgba(0, 0, 0, 0.28);
         transform: rotate(90deg);
       }
+
       label {
         position: relative;
+
         input {
           width: 267px;
           height: 44px;
@@ -118,6 +141,7 @@ header {
             outline: none;
           }
         }
+
         i {
           position: absolute;
           top: -12px;
@@ -142,20 +166,25 @@ main {
   padding: 30px 140px 0 140px;
   background: #e5e5e5;
   height: 500px;
+
   .main-container {
     display: grid;
     grid-template-columns: 278px 1fr 290px;
     gap: 18px;
+
     .left-sidebar {
       .profile-box {
+        margin-bottom: 24px;
         box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
         width: 278px;
         height: 168px;
         background: #ffffff;
         border-radius: 15px;
+
         .content-text {
           display: flex;
           align-items: center;
+
           > img {
             width: 44px;
             height: 44px;
@@ -164,6 +193,7 @@ main {
             margin-left: 12px;
             border: 2px solid #fff;
           }
+
           .name-job {
             padding-left: 5px;
 
@@ -174,23 +204,27 @@ main {
               line-height: 14px;
               letter-spacing: 1px;
             }
+
             .job {
               color: rgba($color: #000000, $alpha: 0.46);
               font-size: 10px;
             }
           }
+
           .box-bar {
             width: 61px;
             height: 3px;
             background: #f6f6f6;
             border-radius: 8px;
             margin-left: 46px;
+
             span {
               background: var(--color-blue);
               width: auto;
               height: 2px;
               display: block;
               border-radius: 8px;
+
               &::before {
                 content: attr(title);
                 font-size: 10px;
@@ -202,19 +236,673 @@ main {
             }
           }
         }
+
         .box-bottom {
           display: flex;
           align-items: center;
           padding: 8px 0 8px 23px;
           border-top: 1px solid #eeeeee;
           margin-top: 1rem;
+
           img {
             padding-right: 18px;
             cursor: pointer;
           }
+
           span {
             font-size: 10px;
             color: rgba($color: #000000, $alpha: 0.46);
+          }
+        }
+      }
+
+      nav.menu {
+        width: 278px;
+        height: 312px;
+        background: #fcfdfd;
+        border-radius: 16px;
+        padding: 13px 10px 13px 12px;
+
+        ul {
+          width: 100%;
+          height: 100%;
+
+          li {
+            // height: 44px;
+            // display: flex;
+            // align-items: center;
+            padding: 12px 10px;
+            transition: 100ms all;
+
+            a {
+              display: flex;
+              align-items: center;
+              height: 24px;
+              font-size: 16px;
+              color: #666666;
+              position: relative;
+
+              img {
+                margin-right: 15px;
+              }
+
+              > .game-new {
+                height: 16px;
+                width: 32px;
+                background: var(--color-blue);
+                font-size: 11px;
+                color: #fff;
+                border-radius: 8px;
+                @include center;
+                font-weight: 500;
+                position: absolute;
+                top: 0;
+                right: 0;
+              }
+            }
+
+            &:hover {
+              background: #00acff;
+              border-radius: 7px;
+
+              a {
+                color: #fff;
+              }
+            }
+          }
+        }
+      }
+
+      .hashtags {
+        width: 278px;
+        height: 183px;
+        background: #fcfdfd;
+        border-radius: 18px;
+        padding: 17px 20px 20px 28px;
+        margin: 18px 0;
+
+        .hashtags-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          border-bottom: 1px solid #f4f4f4;
+          padding-bottom: 4px;
+          margin-bottom: 14px;
+
+          h4 {
+            font-size: 12px;
+            color: #181818;
+            line-height: 14.06px;
+            text-transform: uppercase;
+            font-weight: 400;
+          }
+
+          a {
+            margin-right: 10px;
+          }
+        }
+
+        .hashtag {
+          background: #e9f0f8;
+          border-radius: 4px;
+          margin: 0 10px 7px 0;
+          display: inline-block;
+
+          a {
+            color: #181818;
+            padding: 4px 12px 6px 12px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+
+    .content {
+      overflow-y: scroll;
+      height: 100vh;
+      width: 103%;
+      scroll-behavior: smooth;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      .new-post {
+        width: 570px;
+        height: 168px;
+        background: #ffffff;
+        border-radius: 16px 16px 0 0;
+        margin-bottom: 24px;
+
+        .new-post-header {
+          display: flex;
+          height: 98px;
+          min-height: 98px;
+          width: 100%;
+          padding-top: 14px;
+
+          .profile-img {
+            padding: 0 16px 0 25px;
+
+            img {
+              width: 40px;
+              height: 40px;
+              border-radius: 18px;
+            }
+          }
+
+          .new-post-content {
+            position: relative;
+            padding-top: 13px;
+
+            textarea {
+              width: 450px;
+              height: 68px;
+              resize: none;
+              border: none;
+
+              &:focus {
+                outline: none;
+              }
+
+              &::placeholder {
+                font-size: 16px;
+                line-height: 19px;
+                color: #666666;
+              }
+            }
+          }
+        }
+
+        .new-post-footer {
+          height: 70px;
+          background: rgba($color: #d2f0ff, $alpha: 0.41);
+          box-shadow: 0 0 2 0 rgba($color: #000000, $alpha: 0.14);
+
+          ul {
+            display: flex;
+            height: 70px;
+            align-items: center;
+            justify-content: space-between;
+            overflow: hidden;
+
+            li {
+              label {
+                display: flex;
+                height: 65px;
+                align-items: center;
+                font-size: 16px;
+                line-height: 19px;
+                color: #666666;
+                cursor: pointer;
+
+                input {
+                  display: none;
+                }
+
+                img {
+                  padding-right: 6px;
+                }
+              }
+
+              a {
+                height: 65px;
+                display: flex;
+                align-items: center;
+                font-size: 16px;
+                line-height: 19px;
+                color: #666666;
+
+                img {
+                  padding-right: 6px;
+                }
+              }
+
+              &:last-child {
+                background: rgba($color: #a1e1ff, $alpha: 0.49);
+                padding: 35px 38px;
+              }
+
+              &:first-child {
+                padding-left: 25px;
+              }
+            }
+          }
+        }
+      }
+
+      .post {
+        width: 570px;
+        height: 518px;
+        background: #ffffff;
+        border-radius: 18px;
+        padding: 14px 31px 8px 17px;
+        margin-bottom: 20px;
+
+        .post-header {
+          margin-bottom: 15px;
+          width: 517px;
+          height: 44px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          .post-profile {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .profile-name-job {
+              margin-left: 8px;
+
+              .name {
+                font-size: 13px;
+                line-height: 14px;
+                font-weight: 500;
+                color: #000;
+              }
+
+              small {
+                font-size: 12px;
+                line-height: 12px;
+                color: rgba($color: #000000, $alpha: 0.55);
+              }
+            }
+          }
+
+          a.dot {
+            transform: rotate(90deg);
+            padding-bottom: 15px;
+
+            i {
+              color: #c4c4c4;
+            }
+          }
+        }
+
+        h4 {
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 16px;
+          margin-bottom: 13px;
+        }
+
+        > img {
+          margin-bottom: 13px;
+        }
+
+        .post-footer {
+          .post-icons {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 15px;
+
+            a {
+              i {
+                font-size: 20px;
+                color: #200e32;
+              }
+            }
+
+            .icon-left {
+              a {
+                position: relative;
+
+                i {
+                  font-size: 20px;
+                  color: #200e32;
+                }
+
+                p {
+                  position: absolute;
+                  top: -10px;
+                  left: 18px;
+                  height: 16px;
+                  font-size: 11px;
+                  width: 47px;
+                  background: #00acff;
+                  border-radius: 8px;
+                  color: #fff;
+                  font-weight: 400;
+                  @include center();
+
+                  &.comment {
+                    width: 16px;
+                  }
+                }
+
+                &:first-child {
+                  margin-right: 36px;
+                }
+              }
+            }
+          }
+
+          .post-recommend {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+
+            img {
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              position: absolute;
+              left: 9px;
+              margin: 6px 0;
+            }
+
+            input {
+              background: #f6f6f6;
+              width: 520px;
+              height: 42px;
+              border: none;
+              padding: 13px 75px 13px 48px;
+              border-radius: 18px;
+
+              &:focus {
+                outline: none;
+              }
+
+              &::placeholder {
+                color: #000;
+                opacity: 0.45;
+                font-size: 12px;
+              }
+            }
+
+            .icon-bottom-send {
+              position: absolute;
+              right: 20px;
+
+              label {
+                input {
+                  display: none;
+                }
+
+                i {
+                  color: rgba($color: #000000, $alpha: 0.46);
+                  font-size: 18px;
+                  margin-left: 5px;
+                  cursor: pointer;
+
+                  &:hover {
+                    background: var(--color-blue);
+                    border-radius: 14px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .right-sidebar {
+      margin-left: 4%;
+      .box-premium {
+        margin-bottom: 24px;
+        width: 278px;
+        height: 168px;
+        background: linear-gradient(
+          250.16deg,
+          #ffffff 2.51%,
+          rgba(213, 241, 255, 0.54) 96.8%
+        );
+        border-radius: 18px;
+        display: flex;
+        .left {
+          flex: 1;
+          padding-left: 14px;
+          h5 {
+            padding-top: 22px;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 28px;
+            text-align: center;
+            color: #000000;
+            margin-bottom: 9px;
+            span {
+              &::before {
+                content: url(../images/Ellipse.png);
+              }
+              &::after {
+                content: url(../images/Ellipse.png);
+              }
+            }
+          }
+          p {
+            font-style: normal;
+            font-size: 12px;
+            line-height: 14px;
+            color: rgba(0, 0, 0, 0.42);
+            margin-bottom: 14px;
+            padding-left: 30px;
+            img {
+              position: absolute;
+              width: 7.38px;
+              height: 7.38px;
+              transform: rotate(-43.48deg);
+              margin-left: 5px;
+            }
+          }
+          .btn {
+            display: inline-block;
+            width: 135px;
+            height: 38px;
+            background: linear-gradient(
+              180deg,
+              rgba(0, 172, 255, 0.46) 0%,
+              rgba(189, 0, 255, 0.345) 100%
+            );
+            border-radius: 11px;
+            font-size: 12px;
+            color: #000;
+            @include center;
+          }
+        }
+        .right {
+          width: 115px;
+          position: relative;
+          .logo {
+            position: absolute;
+            right: 35px;
+            top: 8px;
+            transform: rotate(-43.48deg);
+          }
+          .img {
+            position: absolute;
+            bottom: 0;
+            right: -15px;
+          }
+        }
+      }
+      .box-people {
+        padding: 24px 0 0 22px;
+        width: 278px;
+        height: 306px;
+        background: #fcfdfd;
+        border-radius: 16px;
+        margin-bottom: 24px;
+        h4 {
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 19px;
+          color: #212121;
+          margin-bottom: 24px;
+        }
+        ul {
+          padding-right: 12px;
+          li {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 24px;
+
+            a {
+              display: flex;
+              img {
+                margin-right: 14.5px;
+              }
+              .name-job {
+                h6 {
+                  font-style: normal;
+                  font-weight: 500;
+                  font-size: 16px;
+                  line-height: 19px;
+                  color: #212121;
+                }
+                p {
+                  font-style: normal;
+                  font-weight: 300;
+                  font-size: 11px;
+                  line-height: 13px;
+                  color: #212121;
+                }
+              }
+            }
+            .btn {
+              width: 65px;
+              height: 32px;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 14px;
+              text-align: center;
+              color: #00acff;
+              padding: 9px;
+              border: 1px solid var(--color-blue);
+              border-radius: 8px;
+              &:hover{
+                background: var(--color-blue);
+                color: #fff;
+
+              }
+            }
+            &:last-child {
+              padding-bottom: 24px;
+              margin-bottom: 0;
+              border-bottom: 1px solid #dfdfdf;
+            }
+          }
+        }
+        .seeAll {
+          display: block;
+          margin-top: 16px;
+          color: var(--color-blue);
+          font-size: 12px;
+          font-weight: 500;
+          text-align: center;
+          padding-right: 22px;
+          &:hover{
+            text-decoration: underline;
+          }
+        }
+      }
+      .box-pages {
+        width: 278px;
+        height: 168px;
+        background: #fcfdfd;
+        border-radius: 16px;
+        margin-bottom: 24px;
+        ul {
+          padding: 24px 22px;
+          li {
+            margin-bottom: 24px;
+            a {
+              display: flex;
+              align-items: center;
+              position: relative;
+              img {
+                margin-right: 15px;
+              }
+              p {
+                font-family: "Roboto";
+                font-size: 16px;
+                line-height: 19px;
+                color: #666666;
+              }
+              span {
+                width: 30.18px;
+                height: 16px;
+                background: #ff1930;
+                border-radius: 8px;
+                font-family: "Roboto";
+                font-size: 11px;
+                line-height: 13px;
+                text-align: center;
+                color: #ffffff;
+                padding: 2px 1px 0 0;
+                @include center;
+                position: absolute;
+                right: 0;
+              }
+            }
+            &:last-child {
+              margin-bottom: 0;
+            }
+            &:hover{
+a{
+  text-decoration: underline;
+}
+            }
+          }
+        }
+      }
+     
+      .box-message {
+        width: 278px;
+        height: 56px;
+        background: #fff;
+        padding: 15px 21px;
+        border-radius: 16px 16px 0 0;
+        position: fixed;
+
+      bottom: 0;
+      z-index: 3;
+        
+        .chat {
+          color: #666666;
+          font-size: 22px;
+        }
+
+        input {
+          border: none;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 19px;
+          color: #666666;
+          padding: 3px 5px 15px 5px;
+          width: 160px;
+          &::placeholder {
+            font-size: 16px;
+            color: #666666;
+          }
+          &:focus {
+            outline: none;
+          }
+        }
+
+        span {
+          display: inline-block;
+          position: relative;
+          width: 16px;
+          height: 16px;
+          background: #ff1930;
+          border-radius: 8px;
+          font-size: 11px;
+          color: #fff;
+          text-align: center;
+          padding-top: 2px;
+          right: 12px;
+        }
+        .arrow {
+          position: relative;
+          i {
+            position: absolute;
+            transform: rotate(180deg);
+            top: 1px;
           }
         }
       }
