--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17170040');
-  src: url('../font/fontello.eot?17170040#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17170040') format('woff2'),
-       url('../font/fontello.woff?17170040') format('woff'),
-       url('../font/fontello.ttf?17170040') format('truetype'),
-       url('../font/fontello.svg?17170040#fontello') format('svg');
+  src: url('../font/fontello.eot?23700722');
+  src: url('../font/fontello.eot?23700722#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?23700722') format('woff2'),
+       url('../font/fontello.woff?23700722') format('woff'),
+       url('../font/fontello.ttf?23700722') format('truetype'),
+       url('../font/fontello.svg?23700722#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17170040#fontello') format('svg');
+    src: url('../font/fontello.svg?23700722#fontello') format('svg');
   }
 }
 */
@@ -54,10 +54,24 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-home:before { content: '\e800'; } /* '' */
-.icon-notification:before { content: '\e801'; } /* '' */
-.icon-profile:before { content: '\e802'; } /* '' */
+.icon-home-1:before { content: '\e800'; } /* '' */
+.icon-notification-1:before { content: '\e801'; } /* '' */
+.icon-profile-1:before { content: '\e802'; } /* '' */
 .icon-search:before { content: '\e803'; } /* '' */
-.icon-user:before { content: '\e804'; } /* '' */
-.icon-work:before { content: '\e805'; } /* '' */
-.icon-chat:before { content: '\e806'; } /* '' */
+.icon-user-1:before { content: '\e804'; } /* '' */
+.icon-work-1:before { content: '\e805'; } /* '' */
+.icon-chat-1:before { content: '\e806'; } /* '' */
+.icon-search-1:before { content: '\e807'; } /* '' */
+.icon-send:before { content: '\e808'; } /* '' */
+.icon-dot-3:before { content: '\e809'; } /* '' */
+.icon-user:before { content: '\e80a'; } /* '' */
+.icon-voice:before { content: '\e80b'; } /* '' */
+.icon-work:before { content: '\e80c'; } /* '' */
+.icon-bookmark:before { content: '\e80d'; } /* '' */
+.icon-chat:before { content: '\e80e'; } /* '' */
+.icon-down-open-big:before { content: '\e80f'; } /* '' */
+.icon-home:before { content: '\e810'; } /* '' */
+.icon-image:before { content: '\e811'; } /* '' */
+.icon-notification:before { content: '\e813'; } /* '' */
+.icon-profile:before { content: '\e814'; } /* '' */
+.icon-like:before { content: '\e816'; } /* '' */
